maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: illegal start of declaration
 	droite();
        ^Escaper:14: error: illegal start of declaration
 	gauche();
        ^Escaper:15: error: illegal start of declaration
 	return flag;
        ^